[gd_scene load_steps=3 format=3 uid="uid://tqnyqg7aikhr"]

[ext_resource type="Script" uid="uid://ydgf8jd7osct" path="res://addons/diisis/editor/src/incoming_references_window.gd" id="1_l47po"]
[ext_resource type="Theme" uid="uid://jddhsc4auo55" path="res://addons/diisis/editor/visuals/theme/amber_cherryblossom.tres" id="1_okfbl"]

[node name="IncomingReferencesWindow" type="Window"]
title = "Incoming References"
initial_position = 4
size = Vector2i(400, 300)
wrap_controls = true
transient = true
always_on_top = true
theme = ExtResource("1_okfbl")
script = ExtResource("1_l47po")

[node name="Control" type="Control" parent="."]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="ScrollContainer" type="ScrollContainer" parent="Control"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="Control/ScrollContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="PanelContainer" type="PanelContainer" parent="Control/ScrollContainer/VBoxContainer"]
layout_mode = 2

[node name="HBoxContainer" type="HBoxContainer" parent="Control/ScrollContainer/VBoxContainer/PanelContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="Control/ScrollContainer/VBoxContainer/PanelContainer/HBoxContainer"]
layout_mode = 2
text = "References to:"

[node name="DestinationLabel" type="RichTextLabel" parent="Control/ScrollContainer/VBoxContainer/PanelContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
bbcode_enabled = true
text = "lmao"
fit_content = true

[node name="Label2" type="Label" parent="Control/ScrollContainer/VBoxContainer"]
self_modulate = Color(1, 1, 1, 0.647059)
layout_mode = 2
text = "Click on the addresses to go there!"

[node name="NoReferencesLabel" type="Label" parent="Control/ScrollContainer/VBoxContainer"]
self_modulate = Color(1, 1, 1, 0.647059)
layout_mode = 2
text = "No references!"

[node name="NextSection" type="VBoxContainer" parent="Control/ScrollContainer/VBoxContainer"]
layout_mode = 2

[node name="HBoxContainer" type="HBoxContainer" parent="Control/ScrollContainer/VBoxContainer/NextSection"]
layout_mode = 2

[node name="Label3" type="Label" parent="Control/ScrollContainer/VBoxContainer/NextSection/HBoxContainer"]
layout_mode = 2
text = "Pages"

[node name="HSeparator" type="HSeparator" parent="Control/ScrollContainer/VBoxContainer/NextSection/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="NextContainer" type="GridContainer" parent="Control/ScrollContainer/VBoxContainer/NextSection"]
layout_mode = 2

[node name="LoopbackSection" type="VBoxContainer" parent="Control/ScrollContainer/VBoxContainer"]
layout_mode = 2

[node name="HBoxContainer" type="HBoxContainer" parent="Control/ScrollContainer/VBoxContainer/LoopbackSection"]
layout_mode = 2

[node name="Label3" type="Label" parent="Control/ScrollContainer/VBoxContainer/LoopbackSection/HBoxContainer"]
layout_mode = 2
text = "Loopback"

[node name="HSeparator" type="HSeparator" parent="Control/ScrollContainer/VBoxContainer/LoopbackSection/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="LoopbackContainer" type="GridContainer" parent="Control/ScrollContainer/VBoxContainer/LoopbackSection"]
layout_mode = 2

[node name="JumpSection" type="VBoxContainer" parent="Control/ScrollContainer/VBoxContainer"]
layout_mode = 2

[node name="HBoxContainer2" type="HBoxContainer" parent="Control/ScrollContainer/VBoxContainer/JumpSection"]
layout_mode = 2

[node name="Label3" type="Label" parent="Control/ScrollContainer/VBoxContainer/JumpSection/HBoxContainer2"]
layout_mode = 2
text = "Jump"

[node name="HSeparator" type="HSeparator" parent="Control/ScrollContainer/VBoxContainer/JumpSection/HBoxContainer2"]
layout_mode = 2
size_flags_horizontal = 3

[node name="JumpContainer" type="GridContainer" parent="Control/ScrollContainer/VBoxContainer/JumpSection"]
layout_mode = 2

[connection signal="close_requested" from="." to="." method="_on_close_requested"]
[connection signal="meta_clicked" from="Control/ScrollContainer/VBoxContainer/PanelContainer/HBoxContainer/DestinationLabel" to="." method="_on_destination_label_meta_clicked"]
